package model;

public enum ConflictToken {
    MIN_ONE,
    ONE,
    THREE,
    FIVE
}
