package main.java.model;

public enum Resource {
    WOOD,
    STONE,
    ORE,
    CLAY,
    GLASS,
    LOOM,
    PAPYRUS
}
