package main.java.model.bonus;

public interface Bonus {
}
