package main.java.model.costs;

public interface Cost {
}
