package model.resources;

public enum ResourceType {
    CLAY,
    ORE,
    STONE,
    WOOD,
    GLASS,
    LOOM,
    PAPYRUS
}
